--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --portfolio-item-border-color: #eeeeee;
   --social-links-color: #afb1b8;
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --form-input-color: rgba(33, 33, 33, 0.2);
 }
 
 body {
@@ -522,6 +523,7 @@ img {
   position: relative;
   min-width: 528px;
   min-height: 581px;
+  padding: 40px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -543,4 +545,64 @@ img {
   background-color: inherit;
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+.close-button:hover,
+.close-button:focus {
+  fill: var(--accent-color);
+}
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.form-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--title-color);
+  text-align: center;
+}
+.form-field label {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+.form-field input {
+  border: 1px solid var(--form-input-color);
+  border-radius: 4px;
+}
+.form-field textarea {
+  resize: none;
+  min-height: 120px;
+  padding: 12px 16px;
+  border: 1px solid var(--form-input-color);
+  border-radius: 4px;
+}
+.form-field textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+.policy-field {
+  display: flex;
+  align-items: center;
+  margin: 10px auto 30px;
+}
+.policy-field input {
+  margin-right: 8px;
+}
+.policy-field label {
+  line-height: 1.7;
+}
+.policy-field a {
+  text-decoration: underline;
+  color: var(--accent-color);
 }
