--- a/css/styles.css
+++ b/css/styles.css
@@ -163,9 +163,15 @@ img {
   background-color: #c4c4c4;
   text-align: center;
 }
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .hero .heading {
   width: 696px;
-  margin: 0 auto 30px auto;
+  margin-bottom: 30px;
 
   color: var(--white-text);
   font-weight: 900;
@@ -181,7 +187,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  padding: 0;
 
   background-color: #188ce8;
   color: var(--white-text);
@@ -194,7 +200,6 @@ img {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
-  text-align: center;
   letter-spacing: 0.06em;
 }
 .primary-button:hover,
@@ -390,9 +395,11 @@ img {
   display: flex;
 }
 .address-wrap {
+  display: flex;
+  flex-direction: column;
   margin-right: 70px;
 }
-.footer-social-links .call {
+.footer-title {
   margin-bottom: 20px;
   text-transform: uppercase;
   font-weight: 700;
@@ -404,9 +411,42 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
 }
 .footer-social-links {
+  margin-right: 93px;
   margin-top: 12px;
 }
-
+.subscription-section {
+  margin-top: 12px;
+}
+.footer-form {
+  width: 570px;
+  display: flex;
+  gap: 12px;
+  justify-content: space-between;
+}
+.email-input {
+  flex: 1 1 auto;
+  padding: 15px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: var(--white-text);
+}
+.email-input::placeholder {
+  font-size: 16px;
+}
+.footer-button {
+  width: 200px;
+  margin: 0;
+}
+.footer-button::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  background-image: url(../images/send-icon.svg);
+  background-size: contain;
+}
 /* Portfolio */
 .filter-buttons {
   display: flex;
@@ -553,11 +593,15 @@ img {
 .form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .form-field {
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 .form-title {
   margin-bottom: 12px;
@@ -567,42 +611,80 @@ img {
   color: var(--title-color);
   text-align: center;
 }
-.form-field label {
+.form-label {
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 }
-.form-field input {
+.input-wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.form-input {
+  padding: 11px 12px;
+  padding-left: 42px;
   border: 1px solid var(--form-input-color);
   border-radius: 4px;
+  cursor: pointer;
 }
-.form-field textarea {
+.form-field:focus-within .icon {
+  fill: var(--accent-color);
+}
+.form-field:focus-within .form-input,
+.form-field:focus-within .comment {
+  border: 1px solid var(--accent-color);
+  outline: 0px solid var(--white-text);
+}
+.input-wrap .icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+.form-field .comment {
   resize: none;
   min-height: 120px;
   padding: 12px 16px;
   border: 1px solid var(--form-input-color);
   border-radius: 4px;
+  cursor: pointer;
 }
-.form-field textarea::placeholder {
+.form-field .comment::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
 }
+
 .policy-field {
   display: flex;
   align-items: center;
   margin: 10px auto 30px;
 }
-.policy-field input {
+.policy-input {
+  appearance: none;
   margin-right: 8px;
 }
-.policy-field label {
+.policy-label {
   line-height: 1.7;
+  margin-right: 6px;
 }
-.policy-field a {
-  text-decoration: underline;
+.policy-link {
+  text-decoration-line: underline;
   color: var(--accent-color);
+}
+.checkbox-icon {
+  width: 16px;
+  height: 15px;
+  background-image: url(../images/uncheck-icon.svg);
+  background-size: contain;
+  margin-right: 7px;
+}
+.policy-input:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  background-image: url(../images/check-icon.svg);
+  border-radius: 2px;
 }
